--- a/src/main/resources/templates/th/fragments/sidebarfilter.html
+++ b/src/main/resources/templates/th/fragments/sidebarfilter.html
@@ -1,5 +1,3 @@
-
-
 <div th:fragment="sidebarFragment">
 
     <style>
@@ -13,6 +11,7 @@
         .item ul, .nav input[type="checkbox"] {
             display: none;
         }
+
         #menu:checked ~ .multi-level, .item input:checked ~ ul {
             display: block;
         }
@@ -21,18 +20,21 @@
         label:hover {
             cursor: pointer;
         }
+
         label {
             width: 100%;
             display: block;
             z-index: 3;
             position: relative;
         }
+
         .nav {
             width: 100%;
             background-color: white;
             overflow-x: hidden;
             border-bottom: 1px solid gainsboro;
         }
+
         .nav ul, .nav li, label {
             line-height: 50px;
             margin: 0;
@@ -43,9 +45,11 @@
             font-weight: 100;
             width: 100%;
         }
+
         .item ul {
             padding: 0 0.25em;
         }
+
         .nav li a {
             line-height: 50px;
             margin: 0;
@@ -63,47 +67,55 @@
             <input type="checkbox" id="A"/>
             <label for="A">가구</label>
             <ul>
-                <li><div class="sub-item">
-                    <input type="checkbox" id="A-A"/>
-                    <label for="A-A">거실가구</label>
-                    <ul>
-                        <li><a href="/productions/category?categoryCode=100100001">소파</a></li>
-                        <li><a href="/productions/category?categoryCode=100100002">거실장</a></li>
-                        <li><a href="/productions/category?categoryCode=100100004">거실의자</a></li>
-                        <li><a href="/productions/category?categoryCode=100100003">거실테이블</a></li>
-                    </ul>
-                </div></li>
+                <li>
+                    <div class="sub-item">
+                        <input type="checkbox" id="A-A"/>
+                        <label for="A-A">거실가구</label>
+                        <ul>
+                            <li><a href="/productions/category?categoryCode=100100001">소파</a></li>
+                            <li><a href="/productions/category?categoryCode=100100002">거실장</a></li>
+                            <li><a href="/productions/category?categoryCode=100100004">거실의자</a></li>
+                            <li><a href="/productions/category?categoryCode=100100003">거실테이블</a></li>
+                        </ul>
+                    </div>
+                </li>
 
-                <li><div class="sub-item">
-                    <input type="checkbox" id="A-B"/>
-                    <label for="A-B">침실가구</label>
-                    <ul>
-                        <li><a href="#">침대</a></li>
-                        <li><a href="#">서랍장</a></li>
-                        <li><a href="#">화장대</a></li>
-                        <li><a href="#">매트리스</a></li>
-                    </ul>
-                </div></li>
+                <li>
+                    <div class="sub-item">
+                        <input type="checkbox" id="A-B"/>
+                        <label for="A-B">침실가구</label>
+                        <ul>
+                            <li><a href="#">침대</a></li>
+                            <li><a href="#">서랍장</a></li>
+                            <li><a href="#">화장대</a></li>
+                            <li><a href="#">매트리스</a></li>
+                        </ul>
+                    </div>
+                </li>
 
-                <li><div class="sub-item">
-                    <input type="checkbox" id="A-C"/>
-                    <label for="A-C">주방가구</label>
-                    <ul>
-                        <li><a href="#">주방수납장</a></li>
-                        <li><a href="#">식탁의자</a></li>
-                        <li><a href="#">식탁</a></li>
-                    </ul>
-                </div></li>
+                <li>
+                    <div class="sub-item">
+                        <input type="checkbox" id="A-C"/>
+                        <label for="A-C">주방가구</label>
+                        <ul>
+                            <li><a href="#">주방수납장</a></li>
+                            <li><a href="#">식탁의자</a></li>
+                            <li><a href="#">식탁</a></li>
+                        </ul>
+                    </div>
+                </li>
 
-                <li><div class="sub-item">
-                    <input type="checkbox" id="A-D"/>
-                    <label for="A-D">드레스룸</label>
-                    <ul>
-                        <li><a href="#">옷장</a></li>
-                        <li><a href="#">행거</a></li>
-                        <li><a href="#">서랍장</a></li>
-                    </ul>
-                </div></li>
+                <li>
+                    <div class="sub-item">
+                        <input type="checkbox" id="A-D"/>
+                        <label for="A-D">드레스룸</label>
+                        <ul>
+                            <li><a href="#">옷장</a></li>
+                            <li><a href="#">행거</a></li>
+                            <li><a href="#">서랍장</a></li>
+                        </ul>
+                    </div>
+                </li>
             </ul>
         </div>
 
@@ -112,32 +124,38 @@
             <label for="B">수납정리</label>
 
             <ul>
-                <li><div class="sub-item">
-                    <input type="checkbox" id="B-A"/>
-                    <label for="B-A">서랍정리</label>
-                    <ul>
-                        <li><a href="#">서랍장</a></li>
-                        <li><a href="#">이동식정리함</a></li>
-                    </ul>
-                </div></li>
+                <li>
+                    <div class="sub-item">
+                        <input type="checkbox" id="B-A"/>
+                        <label for="B-A">서랍정리</label>
+                        <ul>
+                            <li><a href="#">서랍장</a></li>
+                            <li><a href="#">이동식정리함</a></li>
+                        </ul>
+                    </div>
+                </li>
 
-                <li><div class="sub-item">
-                    <input type="checkbox" id="B-B"/>
-                    <label for="B-B">수납정리</label>
-                    <ul>
-                        <li><a href="#">리빙박스</a></li>
-                        <li><a href="#">기타정리용품</a></li>
-                    </ul>
-                </div></li>
+                <li>
+                    <div class="sub-item">
+                        <input type="checkbox" id="B-B"/>
+                        <label for="B-B">수납정리</label>
+                        <ul>
+                            <li><a href="#">리빙박스</a></li>
+                            <li><a href="#">기타정리용품</a></li>
+                        </ul>
+                    </div>
+                </li>
 
-                <li><div class="sub-item">
-                    <input type="checkbox" id="B-C"/>
-                    <label for="B-C">현관/신발정리</label>
-                    <ul>
-                        <li><a href="#">신발장</a></li>
-                        <li><a href="#">우산꽂이</a></li>
-                    </ul>
-                </div></li>
+                <li>
+                    <div class="sub-item">
+                        <input type="checkbox" id="B-C"/>
+                        <label for="B-C">현관/신발정리</label>
+                        <ul>
+                            <li><a href="#">신발장</a></li>
+                            <li><a href="#">우산꽂이</a></li>
+                        </ul>
+                    </div>
+                </li>
 
             </ul>
         </div>
@@ -147,23 +165,27 @@
             <label for="C">홈데코</label>
 
             <ul>
-                <li><div class="sub-item">
-                    <input type="checkbox" id="C-A"/>
-                    <label for="C-A">조명</label>
-                    <ul>
-                        <li><a href="#">스탠드</a></li>
-                        <li><a href="#">무드등</a></li>
-                    </ul>
-                </div></li>
+                <li>
+                    <div class="sub-item">
+                        <input type="checkbox" id="C-A"/>
+                        <label for="C-A">조명</label>
+                        <ul>
+                            <li><a href="#">스탠드</a></li>
+                            <li><a href="#">무드등</a></li>
+                        </ul>
+                    </div>
+                </li>
 
-                <li><div class="sub-item">
-                    <input type="checkbox" id="C-B"/>
-                    <label for="C-B">장식</label>
-                    <ul>
-                        <li><a href="#">액자</a></li>
-                        <li><a href="#">리스/가랜드</a></li>
-                    </ul>
-                </div></li>
+                <li>
+                    <div class="sub-item">
+                        <input type="checkbox" id="C-B"/>
+                        <label for="C-B">장식</label>
+                        <ul>
+                            <li><a href="#">액자</a></li>
+                            <li><a href="#">리스/가랜드</a></li>
+                        </ul>
+                    </div>
+                </li>
             </ul>
         </div>
     </div>
