--- a/src/main/resources/templates/th/main/productDetailsLJH.html
+++ b/src/main/resources/templates/th/main/productDetailsLJH.html
@@ -17,7 +17,8 @@
     <input type="submit" value="장바구니모양" id="basketBtn" onClick="saveSessionStorage();">
 </form>
 안녕
-<a href="basketPop" onclick="window.open(this.href, '_blank', 'width=300px,height=300px,resizable=no,scrollbars=no,status=no,left=0px,top=0px'); return false;">팝업 </a>
+<a href="basketPop"
+   onclick="window.open(this.href, '_blank', 'width=300px,height=300px,resizable=no,scrollbars=no,status=no,left=0px,top=0px'); return false;">팝업 </a>
 
 <div id="output">
     <!-- 저장된 내용을 출력할 DIV 엘리먼트 -->
@@ -35,17 +36,16 @@
     //var arrValue = new Array();
     var goSession;
     var sessionCheck = sessionStorage.getItem("ProductNameSession");
-    if(sessionCheck != null){
-    var stored = JSON.parse(sessionCheck);
-    console.log("stroed : " + stored + "stored[1] = " + stored[1]);
-    }else
-    {
+    if (sessionCheck != null) {
+        var stored = JSON.parse(sessionCheck);
+        console.log("stroed : " + stored + "stored[1] = " + stored[1]);
+    } else {
         console.log("stored 없음");
     }
     console.log("sessionCheck : " + sessionCheck + "getItem" + sessionStorage.getItem(sessionStorage.key(1)));
-    if(sessionCheck == null){
+    if (sessionCheck == null) {
         console.log("sessionCheck is null");
-    }else{
+    } else {
         console.log(" 길이 : " + sessionStorage.getItem(sessionStorage.key(1)).length);
     }
     //sessionStorage.key(1)
@@ -62,47 +62,47 @@
     // 세션 받아와서  값 추가한 뒤  다시 세션에 저장
     var valList;
     var getHoho;
-    if(sessionCheck == null){
-    valList = new Array();
-    a=0;
-    }else{
+    if (sessionCheck == null) {
+        valList = new Array();
+        a = 0;
+    } else {
         a = stored.length;
         console.log("stored Len : " + a);
-       /* valList = sessionCheck;
-        a=valList.length;
-        console.log("a : " + a);*/
+        /* valList = sessionCheck;
+         a=valList.length;
+         console.log("a : " + a);*/
     }
     var key;
 
     function saveSessionStorage() {
-    console.log("saveSessionStorage 실행");
+        console.log("saveSessionStorage 실행");
         // 변수를 선언한다.
         var key = document.getElementById("productName").value;
         var value = document.getElementById("productNo").value;
         //console.log("value  :  "+value);
-        if(sessionCheck == null){
+        if (sessionCheck == null) {
             console.log("sessionCheck is null");
-            while(true){
-                console.log(a+"번째");
-                if(valList[a]==null){
-                    console.log("확인 : "  +  valList);
+            while (true) {
+                console.log(a + "번째");
+                if (valList[a] == null) {
+                    console.log("확인 : " + valList);
                     valList[a] = value;
-                    console.log("varList" + a + "번째 : " +valList[a] );
+                    console.log("varList" + a + "번째 : " + valList[a]);
                     break;
                 }
                 a++;
             }
             sessionStorage.setItem("ProductNameSession", JSON.stringify(valList));
-        }else{
+        } else {
             console.log("sessionCheck is  not null");
-            while(true){
-                if(stored[a] == null){
-                    console.log("stored"+a+" is Null");
+            while (true) {
+                if (stored[a] == null) {
+                    console.log("stored" + a + " is Null");
                     stored[a] = value;
                     console.log("append 한 값은 : " + stored);
                     break;
-                }else{
-                    console.log("stored"+a+" is Not Null");
+                } else {
+                    console.log("stored" + a + " is Not Null");
                 }
                 a++;
             }
@@ -111,21 +111,21 @@
 
 
         // setItem( ) 메서드를 이용하여 key를 지정하고, value값을 세션에 저장한다.
-        sessionStorage.setItem(key,value);
+        sessionStorage.setItem(key, value);
         //console.log("@@@@@@@@@@@@@@@ valList : "+valList);
         printSessionStorage();
 
     }
+
     //고쳐야함
 
 
-    document.addEventListener("DOMContentLoaded", function() {
-        if(window.sessionStorage) {
+    document.addEventListener("DOMContentLoaded", function () {
+        if (window.sessionStorage) {
 
             console.log("sessionStorage가 있음");
             //sessionStorage.clear();
-        }
-        else {
+        } else {
             alert("세션을 사용할 수 없는 브라우저입니다.");
         }
 
@@ -133,7 +133,7 @@
 
     function printSessionStorage() {
         console.log("printSessionStorage 실행");
-        var i=0;
+        var i = 0;
         var output = "";
 
         //console.log("len : " + len);
@@ -156,7 +156,7 @@
         }
 
         //console.log(arrValue);
-       // console.log(arrValue[0]);
+        // console.log(arrValue[0]);
         /*for (var i = 0; i < sessionStorage.length; i++) {
             var keyTest = window.sessionStorage;
             arrValue[i] = JSON.stringify(sessionStorage.getItem(keyTest));
@@ -179,11 +179,11 @@
         $.ajax({ // 세션 보내기 ajax
             //console.log("hi");
             url: "basketSession",
-            type : "POST",
-            traditional:true,
-            data : {'hoho' : goSession}
+            type: "POST",
+            traditional: true,
+            data: {'hoho': goSession}
             ,
-            success: function(e){
+            success: function (e) {
                 var result = e.result
                 console.log("success");
                 //console.log(hoho3);
@@ -191,7 +191,7 @@
                 alert("저장 됐습니다")
                 location.href = "/goBasket";
             },
-            error: function(){
+            error: function () {
                 alert("test err");
             }
         });
