--- a/src/main/resources/static/css/mainNavigation.css
+++ b/src/main/resources/static/css/mainNavigation.css
@@ -64,12 +64,14 @@
     border-bottom: 1px solid #ededed;
     z-index: 502
 }
+
 .fixed-header {
     position: fixed;
     top: 0;
     width: 100%;
-    padding:20px 0;
+    padding: 20px 0;
 }
+
 .layout-navigation-primary__content {
     display: -webkit-box;
     display: -webkit-flex;
@@ -787,7 +789,11 @@
         color: #fff
     }
 }
-<!-- footer -->
+
+<!--
+footer
+
+-->
 .layout-footer__cs {
     margin: 0 0 25px;
     font-size: 12px;
@@ -938,6 +944,7 @@
     color: #424242;
     line-height: 16px
 }
+
 .layout, .page, body, html {
     height: 100%
 }
