--- a/src/main/resources/templates/th/admin/statAdmin/productSalesVolume.html
+++ b/src/main/resources/templates/th/admin/statAdmin/productSalesVolume.html
@@ -9,19 +9,18 @@
 <script type="text/javascript" src="http://code.jquery.com/jquery-2.0.2.js"></script>
 
 
-
 <!-- body@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
 
 <body>
 
 <!-- 차트 div -->
 <!-- 차트 1 -->
-<div id = "name" style="width:100%; height:60px" >
+<div id="name" style="width:100%; height:60px">
     <canvas id="myChart" style="width:10%; height:100%; float:left"></canvas>
 </div>
 <!-- 차트 2 -->
-<div id = "name2" style="width:100%; height:70px" >
-    <canvas id="myChart2" style="width:10%; height:100%; float:left" ></canvas>
+<div id="name2" style="width:100%; height:70px">
+    <canvas id="myChart2" style="width:10%; height:100%; float:left"></canvas>
 </div>
 <!-- 차트 3 -->
 <div name="myShow" style="width:100%; height:60px">
@@ -35,20 +34,8 @@
 
 
 <div id="result"></div>
-<span th:text = "${jsonText}"></span>
+<span th:text="${jsonText}"></span>
 </body>
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 <!-- type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"
@@ -100,29 +87,24 @@
  -->
 
 
-
-
-
 <!-- 보여주기 감추기 -->
 <script>
-    function showHide2(){
-        if(document.getElementById("myChart2").style.display =='none'){
-            document.getElementById("myChart2").style.display ='block';
-        }
-        else{
-            document.getElementById("myChart2").style.display ='none';
+    function showHide2() {
+        if (document.getElementById("myChart2").style.display == 'none') {
+            document.getElementById("myChart2").style.display = 'block';
+        } else {
+            document.getElementById("myChart2").style.display = 'none';
         }
     }
 
 </script>
 
 <script>
-    function showHide3(){
-        if(document.getElementById("myChart3").style.display =='none'){
-            document.getElementById("myChart3").style.display ='block';
-        }
-        else{
-            document.getElementById("myChart3").style.display ='none';
+    function showHide3() {
+        if (document.getElementById("myChart3").style.display == 'none') {
+            document.getElementById("myChart3").style.display = 'block';
+        } else {
+            document.getElementById("myChart3").style.display = 'none';
         }
     }
 
@@ -137,11 +119,11 @@
     var jsonParse = JSON.parse(json);
     var chart1Arr = new Array();
     var yearArr = new Array();
-    for(var i=0; i<jsonParse.length; i++){
-        chart1Arr[i] =jsonParse[i].productQty;
+    for (var i = 0; i < jsonParse.length; i++) {
+        chart1Arr[i] = jsonParse[i].productQty;
         //yearArr[i] = jsonParse[i].productionDay;
     }
-    console.log(chart1Arr +""+yearArr);
+    console.log(chart1Arr + "" + yearArr);
 
 
     //var productArray2 = new Array(6);
@@ -170,7 +152,7 @@
         scales: {
             yAxes: [{
                 ticks: {
-                    beginAtZero:true
+                    beginAtZero: true
                 }
             }]
         }
@@ -182,8 +164,8 @@
         datasets: [{
             label: 'product of Votes',
             data: chart1Arr, // 판매량 1, 품목, 날짜 ==== 0507날짜의 판매량 1위~6위 품목
-            backgroundColor : backC,
-            borderColor : borderC,
+            backgroundColor: backC,
+            borderColor: borderC,
             borderWidth: 1
         }]
     };
@@ -192,9 +174,9 @@
         labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
         datasets: [{
             label: '# of Votes',
-            data: [1,2,3,4,5,6], // 판매량 1, 품목, 날짜 ==== 0507날짜의 판매량 1위~6위 품목
-            backgroundColor : backC,
-            borderColor : borderC,
+            data: [1, 2, 3, 4, 5, 6], // 판매량 1, 품목, 날짜 ==== 0507날짜의 판매량 1위~6위 품목
+            backgroundColor: backC,
+            borderColor: borderC,
             borderWidth: 1
         }]
     };
@@ -203,15 +185,14 @@
         labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
         datasets: [{
             label: '# of Votes',
-            data: [11,22,33,44,55,66], // 판매량 1, 품목, 날짜 ==== 0507날짜의 판매량 1위~6위 품목
-            backgroundColor : backC,
-            borderColor : borderC,
+            data: [11, 22, 33, 44, 55, 66], // 판매량 1, 품목, 날짜 ==== 0507날짜의 판매량 1위~6위 품목
+            backgroundColor: backC,
+            borderColor: borderC,
             borderWidth: 1
         }]
     };
 
     // 1번째 차트 @@@@@@@@@@@@@@@@@@
-
 
 
     $(document).ready(
@@ -224,12 +205,11 @@
                 options: options
             });
 
-            chart1Canvas.onclick = function(evt) {
-                if(document.getElementById("myChart2").style.display =='none'){
-                    document.getElementById("myChart2").style.display ='block';
-                }
-                else{
-                    document.getElementById("myChart2").style.display ='none';
+            chart1Canvas.onclick = function (evt) {
+                if (document.getElementById("myChart2").style.display == 'none') {
+                    document.getElementById("myChart2").style.display = 'block';
+                } else {
+                    document.getElementById("myChart2").style.display = 'none';
                 }
                 var activePoints = myNewChart.getElementsAtEvent(evt); // aP선언
 
@@ -240,21 +220,21 @@
                     var label = chartData.labels[idx];
                     var value = chartData.datasets[0].data[idx];
                     var labels = chartData.labels[idx];
-                    var form={
-                        quantity : value,
-                        year : label
+                    var form = {
+                        quantity: value,
+                        year: label
                     }
                     console.log("quantity : " + value);
                     console.log("year : " + label);
                     $.ajax({
                         //console.log("hi");
-                        url:"yearGraphAjax",
-                        type : "POST",
-                        data : form,
-                        success: function(data){
+                        url: "yearGraphAjax",
+                        type: "POST",
+                        data: form,
+                        success: function (data) {
                             $('#result').text(data);
                         },//이제 이값보내서 db 통계 뽑아서 다시 불러와서 2번 그래프에 다시 배열
-                        error: function(){
+                        error: function () {
                             alert("test err");
                         }
                     });
@@ -272,20 +252,19 @@
     //2번 차트@@@@@@@@@@
 
     $(document).ready(
-        function(){
+        function () {
             var chart2Canvas = document.getElementById("myChart2");
             var ctx = chart2Canvas.getContext('2d');
             var chart2 = new Chart(ctx, {
                 type: 'bar',
                 data: chart2Data,
-                options : options
+                options: options
             });
-            chart2Canvas.onclick = function(evt) {
-                if(document.getElementById("myChart3").style.display =='none'){
-                    document.getElementById("myChart3").style.display ='block';
-                }
-                else{
-                    document.getElementById("myChart3").style.display ='none';
+            chart2Canvas.onclick = function (evt) {
+                if (document.getElementById("myChart3").style.display == 'none') {
+                    document.getElementById("myChart3").style.display = 'block';
+                } else {
+                    document.getElementById("myChart3").style.display = 'none';
                 }
 
                 var activePoints = chart2.getElementsAtEvent(evt); // aP선언
@@ -307,15 +286,15 @@
     );
 
     $(document).ready(
-        function(){
+        function () {
             var chart3Canvas = document.getElementById("myChart3");
             var ctx = chart3Canvas.getContext('2d');
             var chart3 = new Chart(ctx, {
                 type: 'bar',
                 data: chart3Data,
-                options : options
+                options: options
             });
-            chart3Canvas.onclick = function(evt) {
+            chart3Canvas.onclick = function (evt) {
                 var activePoints = chart3.getElementsAtEvent(evt); // aP선언
 
                 if (activePoints[0]) {
