--- a/src/main/resources/templates/th/fragments/header.html
+++ b/src/main/resources/templates/th/fragments/header.html
@@ -15,7 +15,7 @@
                     </div>
                     <div th:class="layout-navigation-primary__left">
                         <a class="layout-navigation-logo layout-navigation__bar__logo" aria-label="니가사는그집" href="/">
-                        <img th:src="@{/img/theHouseLogo.png}" th:class="icon" width="100" height="100"/></a>
+                            <img th:src="@{/img/theHouseLogo.png}" th:class="icon" width="100" height="100"/></a>
                     </div>
                     <nav class="layout-navigation-primary__menu">
                         <a class="layout-navigation-primary__menu__item" href="">커뮤니티</a>
@@ -29,17 +29,20 @@
                                          aria-haspopup="listbox" aria-expanded="false">
                                         <div class="layout-navigation-search__input">
                                             <form method="get" action="/productions/searchlist" class="form-inline">
-                                            <input class="layout-navigation-search__input__text" type="text"
-                                                   autocomplete="off"
-                                                   size="1" id="id-89-input" aria-autocomplete="list"
-                                                   placeholder="스토어 검색"
-                                                   aria-label="스토어 검색"  name="index" th:id="${index}" th:value="${index?:''}" onfocus="this.value=''">
-                                            <svg class="layout-navigation-search__input__icon" width="24" height="24"
-                                                 viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-                                                 preserveAspectRatio="xMidYMid meet">
-                                                <path d="M22 22l-5-5"></path>
-                                                <circle cx="11" cy="11" r="8"></circle>
-                                            </svg>
+                                                <input class="layout-navigation-search__input__text" type="text"
+                                                       autocomplete="off"
+                                                       size="1" id="id-89-input" aria-autocomplete="list"
+                                                       placeholder="스토어 검색"
+                                                       aria-label="스토어 검색" name="index" th:id="${index}"
+                                                       th:value="${index?:''}" onfocus="this.value=''">
+                                                <svg class="layout-navigation-search__input__icon" width="24"
+                                                     height="24"
+                                                     viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                                     stroke-width="2"
+                                                     preserveAspectRatio="xMidYMid meet">
+                                                    <path d="M22 22l-5-5"></path>
+                                                    <circle cx="11" cy="11" r="8"></circle>
+                                                </svg>
                                             </form>
                                         </div>
                                     </div>
@@ -71,12 +74,14 @@
                 </div>
             </div>
         </div>
-        <div data-sticky-enabled="false" data-sticky-always="true" data-direction="top" data-offset="31" class="sticky-container layout-navigation-secondary-wrap">
+        <div data-sticky-enabled="false" data-sticky-always="true" data-direction="top" data-offset="31"
+             class="sticky-container layout-navigation-secondary-wrap">
             <div class="sticky-child layout-navigation-secondary" style="position: relative;">
                 <div class="layout-navigation-secondary__content">
                     <nav class="layout-navigation-secondary__menu">
                         <a id="storeMain" class="layout-navigation-secondary__menu__item" href="/">스토어홈</a>
-                        <a id="category" class="layout-navigation-secondary__menu__item" href="/productions/category?categoryCode=0">카테고리</a>
+                        <a id="category" class="layout-navigation-secondary__menu__item"
+                           href="/productions/category?categoryCode=0">카테고리</a>
                         <a id="storeBest" class="layout-navigation-secondary__menu__item" href="/storeBest">베스트</a>
                     </nav>
                 </div>
