--- a/src/main/resources/templates/th/fragments/header2.html
+++ b/src/main/resources/templates/th/fragments/header2.html
@@ -1,113 +1,114 @@
-
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <div th:fragment="headerFragment">
-<div class="container">
-    <div class="row justify-content-center">
-        <div class="col-md-12 xs-12 md-auto">
-            <nav class="navbar navbar-icon-top navbar-expand-lg navbar-light" style="background-color: white;">
-                <a class="navbar-brand" href="#"><img th:src="@{/static/icon/house.png}" class="rounded-circle" width=50px
-                                                      height=50px /> <b>TheHouse</b></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse"
-                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-12 xs-12 md-auto">
+                <nav class="navbar navbar-icon-top navbar-expand-lg navbar-light" style="background-color: white;">
+                    <a class="navbar-brand" href="#"><img th:src="@{/static/icon/house.png}" class="rounded-circle"
+                                                          width=50px
+                                                          height=50px/> <b>TheHouse</b></a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse"
+                            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                            aria-expanded="false"
+                            aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
 
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item dropdown">
-                            <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                                aria-haspopup="true" aria-expanded="false">
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav mr-auto">
+                            <li class="nav-item dropdown">
+                                <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                                   aria-haspopup="true" aria-expanded="false">
 
-                                Community
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">프로필</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">마이쇼핑</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">설정</a>
-                            </div>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                                aria-haspopup="true" aria-expanded="false">
+                                    Community
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <a class="dropdown-item" href="#">프로필</a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item" href="#">마이쇼핑</a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item" href="#">설정</a>
+                                </div>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                                   aria-haspopup="true" aria-expanded="false">
 
-                                Store
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">스토어홈</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">카테고리</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">베스트</a>
-                            </div>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled" href="#">
+                                    Store
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <a class="dropdown-item" href="#">스토어홈</a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item" href="#">카테고리</a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item" href="#">베스트</a>
+                                </div>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link disabled" href="#">
 
-                                Disabled
-                            </a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                                aria-haspopup="true" aria-expanded="false">
+                                    Disabled
+                                </a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                                   aria-haspopup="true" aria-expanded="false">
 
-                                Dropdown
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">Action</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">Another action</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">Something else here</a>
-                            </div>
-                        </li>
-                    </ul>
+                                    Dropdown
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <a class="dropdown-item" href="#">Action</a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item" href="#">Another action</a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item" href="#">Something else here</a>
+                                </div>
+                            </li>
+                        </ul>
 
-                    <div class="nav-wrapper">
-                        <form class="form-inline d-flex justify-content-center md-form form-sm mt-0">
-                            <i class="fas fa-search" aria-hidden="true"></i>
-                            <input class="form-control form-control-sm ml-3 w-75" type="text" placeholder="Search"
-                                aria-label="Search">
-                        </form>
-                    </div>
+                        <div class="nav-wrapper">
+                            <form class="form-inline d-flex justify-content-center md-form form-sm mt-0">
+                                <i class="fas fa-search" aria-hidden="true"></i>
+                                <input class="form-control form-control-sm ml-3 w-75" type="text" placeholder="Search"
+                                       aria-label="Search">
+                            </form>
+                        </div>
 
-                    <ul class="navbar-nav">
-                        
-                        <li class="nav-item">
-                            <a class="nav-link" href="##">
+                        <ul class="navbar-nav">
+
+                            <li class="nav-item">
+                                <a class="nav-link" href="##">
                                 <span style="font-size: 20px; color: black;">
                                     <i class="fas fa-cart-arrow-down"></i>
                                 </span>
-                            </a>
-                        </li>
+                                </a>
+                            </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link" href="###">
+                            <li class="nav-item">
+                                <a class="nav-link" href="###">
                                 <span style="font-size: 20px; color: black;">
                                     <i class="fas fa-sign-in-alt"></i>
                                 </span>
-                            </a>
-                        </li>
+                                </a>
+                            </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link" href="#####">
+                            <li class="nav-item">
+                                <a class="nav-link" href="#####">
                                 <span style="font-size: 20px; color: black;">
                                     <i class="fas fa-user-plus"></i>
                                 </span>
-                            </a>
-                        </li>
+                                </a>
+                            </li>
 
-                    </ul>
+                        </ul>
 
-                </div>
-            </nav>
+                    </div>
+                </nav>
+            </div>
         </div>
     </div>
-</div>
 </div>
 
 </html>
