--- a/src/main/resources/templates/th/login/customLogin.html
+++ b/src/main/resources/templates/th/login/customLogin.html
@@ -53,15 +53,18 @@
                 <form>
                     <div class="row justify-content-center mt-3 mb-3">
 
-                            <a href="javascript:;" class="btn_social" data-social="google">
-                               <img th:src="@{/img/google.png}" width="60px" height="60px" class="rounded-circle float-left"/>
-                            </a>
+                        <a href="javascript:;" class="btn_social" data-social="google">
+                            <img th:src="@{/img/google.png}" width="60px" height="60px"
+                                 class="rounded-circle float-left"/>
+                        </a>
 
                         <a href="javascript:;" class="btn_social ml-5" data-social="kakao">
-                            <img th:src="@{/img/kakao.png}" width="60px" height="60px" class="rounded-circle float-center"/>
+                            <img th:src="@{/img/kakao.png}" width="60px" height="60px"
+                                 class="rounded-circle float-center"/>
                         </a>
                         <a href="javascript:;" class="btn_social ml-5" data-social="naver">
-                            <img th:src="@{/img/naver.png}" width="60px" height="60px" class="rounded-circle float-right"/>
+                            <img th:src="@{/img/naver.png}" width="60px" height="60px"
+                                 class="rounded-circle float-right"/>
                         </a>
 
                     </div>
