--- a/src/main/resources/templates/th/login/signup.html
+++ b/src/main/resources/templates/th/login/signup.html
@@ -1,83 +1,84 @@
 <!doctype html>
 <html xmlns:th="http://www.thymeleaf.org"
-	  xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-  <head>
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="../../../static/css/login.css">
+    <link rel="stylesheet" type="text/css" href="../../../static/css/login.css">
     <title>니가사는그집</title>
-  </head>
-  <body>
-    
-    <div class="container">
-		<div class="login_wrapper">
-		<div class="text-center">
-			<div class="col-md-12 md-auto mt-4 mb-3">
-				<img th:src="@{/static/icon/house.png}" class="rounded-circle" width="70px" height="70px">
-			</div>
-			
+</head>
+<body>
 
-			<h2>
-				<b>니가사는 그집</b>
-			</h2>
+<div class="container">
+    <div class="login_wrapper">
+        <div class="text-center">
+            <div class="col-md-12 md-auto mt-4 mb-3">
+                <img th:src="@{/static/icon/house.png}" class="rounded-circle" width="70px" height="70px">
+            </div>
 
-		</div>
 
-		<div class="row justify-content-center">
-			<div class="col-md-5 col-xs-10 md-auto">
-				<form class="needs-validation" th:action="@{/login/signupMember}" method="post"
-					novalidate>
-					<hr>
-					<div class="mt-4 mb-3">
-						<label for="userid">이메일<span class="text-muted"></span></label> <input
-							type="text" class="form-control" id="userid" name="userid" placeholder="User email">
-						<div class="invalid-feedback">아이디를 입력하세요.</div>
-					</div>
-					<div class="mb-4">
-						<label for="userpw">패스워드<span class="text-muted"></span></label> <input
-							type="password" class="form-control" id="userpw" name="userpw"
-							placeholder="User password">
-						<div class="invalid-feedback">아이디를 입력하세요.</div>
-					</div>
-					<div class="mb-4">
-						<label for="userName">이름<span class="text-muted"></span></label> <input
-							type="userName" class="form-control" id="userName" name="userName"
-							placeholder="User name">
-						<div class="invalid-feedback">이름을 입력하세요.</div>
-					</div>
-					<div class="mb-4">
-						<label for="userTel">전화번호<span class="text-muted"></span></label> <input
-							type="userTel" class="form-control" id="userTel" name="userTel"
-							placeholder="User tel">
-						<div class="invalid-feedback">전화번호를 입력하세요.</div>
-					</div>
+            <h2>
+                <b>니가사는 그집</b>
+            </h2>
 
-					<button class="btn btn-info btn-lg btn-block btn-dark mb-3" id="loginButton" type="submit">
-						회원가입</button>
-					
+        </div>
 
-				</form>				
-			
-				<form>					
-					<hr>
-					<div class="text-center">
-						<div class="row">
-						<a class="col-md-12 xs-12" href="#">로그인 페이지</a>         
-						</div>
-					</div>
-					 
-				</form>
-					
+        <div class="row justify-content-center">
+            <div class="col-md-5 col-xs-10 md-auto">
+                <form class="needs-validation" th:action="@{/login/signupMember}" method="post"
+                      novalidate>
+                    <hr>
+                    <div class="mt-4 mb-3">
+                        <label for="userid">이메일<span class="text-muted"></span></label> <input
+                            type="text" class="form-control" id="userid" name="userid" placeholder="User email">
+                        <div class="invalid-feedback">아이디를 입력하세요.</div>
+                    </div>
+                    <div class="mb-4">
+                        <label for="userpw">패스워드<span class="text-muted"></span></label> <input
+                            type="password" class="form-control" id="userpw" name="userpw"
+                            placeholder="User password">
+                        <div class="invalid-feedback">아이디를 입력하세요.</div>
+                    </div>
+                    <div class="mb-4">
+                        <label for="userName">이름<span class="text-muted"></span></label> <input
+                            type="userName" class="form-control" id="userName" name="userName"
+                            placeholder="User name">
+                        <div class="invalid-feedback">이름을 입력하세요.</div>
+                    </div>
+                    <div class="mb-4">
+                        <label for="userTel">전화번호<span class="text-muted"></span></label> <input
+                            type="userTel" class="form-control" id="userTel" name="userTel"
+                            placeholder="User tel">
+                        <div class="invalid-feedback">전화번호를 입력하세요.</div>
+                    </div>
 
-			</div>
-		</div>
-	</div>
-	</div>
+                    <button class="btn btn-info btn-lg btn-block btn-dark mb-3" id="loginButton" type="submit">
+                        회원가입
+                    </button>
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-  </body>
+
+                </form>
+
+                <form>
+                    <hr>
+                    <div class="text-center">
+                        <div class="row">
+                            <a class="col-md-12 xs-12" href="#">로그인 페이지</a>
+                        </div>
+                    </div>
+
+                </form>
+
+
+            </div>
+        </div>
+    </div>
+</div>
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+</body>
 </html>
