--- a/src/main/resources/templates/th/main/categoryList.html
+++ b/src/main/resources/templates/th/main/categoryList.html
@@ -21,12 +21,15 @@
                     <div class="col-6 col-md-3 product-item-wrap">
                         <article class="production-item"><a class="production-item__overlay" href=""></a>
                             <div class="production-item-image production-item__image">
-                                <img class="image" alt="" th:src="@{'/uploadImg/'+${products.productMainImg}}" srcset="">
+                                <img class="image" alt="" th:src="@{'/uploadImg/'+${products.productMainImg}}"
+                                     srcset="">
                             </div>
                             <div class="production-item__content">
                                 <h1 class="production-item__header">
-                                    <span class="production-item__header__brand" th:text="${products.sellerName}"></span>
-                                    <span class="production-item__header__name" th:text="${products.productName}"></span></h1>
+                                    <span class="production-item__header__brand"
+                                          th:text="${products.sellerName}"></span>
+                                    <span class="production-item__header__name"
+                                          th:text="${products.productName}"></span></h1>
                                 <span class="production-item-price">
                             <span class="production-item-price__price" th:text="${products.customerPrice}"></span>
                         </span>
