--- a/src/main/resources/templates/th/member/basket/basket.html
+++ b/src/main/resources/templates/th/member/basket/basket.html
@@ -199,11 +199,13 @@
                                     </div>
                                 </dl>
                                 <div class="commerce-cart__side-bar__order">
-                                    <a href="/goPayment">
+                                    <form action="/goPayment" method="get">
+                                    <a href="#">
                                         <button class="button button--color-blue button--size-50 button--shape-4 commerce-cart__side-bar__order__btn"
-                                                type="button">1개 상품 구매하기
+                                                type="submit" >1개 상품 구매하기
                                         </button>
                                     </a>
+                                    </form>
                                 </div>
                             </div>
                         </div>
