--- a/src/main/resources/templates/th/askBoard/askBoardInsert.html
+++ b/src/main/resources/templates/th/askBoard/askBoardInsert.html
@@ -32,7 +32,7 @@
 <h2>글 쓰기</h2>
 
 <div class="container">
-    <form action="/insertProc" method="post" id="insertBoardFrm" enctype="multipart/form-data">
+    <form action="/askinsertProc" method="post" id="insertBoardFrm" enctype="multipart/form-data">
         <div class="form-group">
             <label for="askTitle">제목</label>
             <input type="text" id="askTitle" name="askTitle" placeholder="제목을 입력하세요">
