--- a/src/main/resources/templates/th/askBoard/askBoardList.html
+++ b/src/main/resources/templates/th/askBoard/askBoardList.html
@@ -7,7 +7,7 @@
 <body>
 <h2>게시글 목록</h2>
 
-<button class="btn btn-primary" onclick="location.href='/insert'">글쓰기</button>
+<button class="btn btn-primary" onclick="location.href='/askinsert'">글쓰기</button>
 
 <div class="container">
     <table class="table table-hover">
@@ -19,7 +19,7 @@
         </tr>
 
         <th:block th:each="board : ${list}">
-            <tr th:onclick="'location.href=\''+@{/detail/{askBoardno}(askBoardno=${board.askBoardno})}+'\''">
+            <tr th:onclick="'location.href=\''+@{/askdetail/{askBoardno}(askBoardno=${board.askBoardno})}+'\''">
                 <td th:text="${board.askBoardno}"/>
                 <td>
                     <th:block th:text="${board.askTitle}"/>
