--- a/src/main/resources/templates/th/askBoard/askBoardUpdate.html
+++ b/src/main/resources/templates/th/askBoard/askBoardUpdate.html
@@ -32,7 +32,7 @@
 <h2>글 수정</h2>
 
 <div class="container">
-    <form action="/updateProc" method="post" id="updateBoardFrm" enctype="multipart/form-data">
+    <form action="/askupdateProc" method="post" id="updateBoardFrm" enctype="multipart/form-data">
         <div class="form-group">
             <label for="askTitle">제목</label>
             <input type="text" th:value="${detail.askTitle}" id="askTitle" name="askTitle"/>
