--- a/src/main/resources/templates/th/fragments/header.html
+++ b/src/main/resources/templates/th/fragments/header.html
@@ -17,6 +17,7 @@
 
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav mr-auto">
+
                             <li class="nav-item dropdown">
                                 <a class="nav-link" href="#" id="navbarDropdown" role="button" aria-haspopup="true"
                                    aria-expanded="false">
@@ -39,13 +40,20 @@
                                     <a class="dropdown-item" href="#">카테고리</a>
                                     <a class="dropdown-item" href="#">베스트</a>
                                 </div>
+
+
                             </li>
+
+
+
                             <li class="nav-item">
                                 <a class="nav-link disabled" href="#">
 
                                     Disabled
                                 </a>
                             </li>
+
+
                             <li class="nav-item dropdown">
                                 <a class="nav-link" href="#" id="navbarDropdown" role="button" aria-haspopup="true"
                                    aria-expanded="false">
@@ -58,6 +66,7 @@
                                     <a class="dropdown-item" href="#">Action</a>
                                 </div>
                             </li>
+
                             <div class="nav-wrapper">
                                 <form class="form-inline d-flex justify-content-center md-form form-sm mt-0">
 
@@ -81,23 +90,45 @@
                                 </a>
                             </li>
 
-                            <li class="nav-item">
-                                <a class="nav-link" href="###">
-                                    <span class="asdf" style="font-size: 16px; color: black;">
-                                        <i class="fas fa-sign-in-alt"> 로그인</i>
 
-                                    </span>
-                                </a>
-                            </li>
+                            <form class="form-inline my-2 my-lg-0" form-method="post" th:action="@{/customLogin}">
+                                <button sec:authorize="isAnonymous()" class="btn btn-outline-info my-2 my-sm-0 btn-sm" type="submit">로그인</button>
+                            </form>
+                            <form class="form-inline my-2 my-lg-0" form-method="post" th:action="@{/customLogout}">
+                                <button sec:authorize="isAuthenticated()" class="btn btn-outline-danger my-2 my-sm-0 btn-sm" type="submit">로그아웃</button>
+                            </form>
+                            <form class="form-inline my-2 my-lg-0" form-method="post" th:action="@{/signup}">
+                                <button sec:authorize="isAnonymous()" class="btn btn-outline-info my-2 my-sm-0 btn-sm" type="submit">회원가입</button>
+                            </form>
+                            <form class="form-inline my-2 my-lg-0" form-method="post" th:action="@{/mypage}">
+                                <button sec:authorize="isAuthenticated()" class="btn btn-outline-danger my-2 my-sm-0 btn-sm" type="submit">마이페이지</button>
+                            </form>
+<!--                            <form class="form-inline my-2 my-lg-0" form-method="post" th:action="@{/customLogout}">-->
+<!--                                <button sec:authorize="isAuthenticated()" class="btn btn-outline-danger my-2 my-sm-0 btn-sm" type="submit">로그아웃</button>-->
+<!--                                <button sec:authorize="isAnonymous()" th:href="@{/customLogin}" class="btn btn-outline-info my-2 my-sm-0 btn-sm" type="submit">로그인</button>-->
 
-                            <li class="nav-item">
-                                <a class="nav-link" href="#####">
-                                    <span style="font-size: 16px; color: black;">
-                                        <i class="fas fa-user-circle"> 회원가입</i>
+<!--                            </form>-->
 
-                                    </span>
-                                </a>
-                            </li>
+
+
+
+<!--                            <li class="nav-item">-->
+<!--                                <a class="nav-link" href="###">-->
+<!--                                    <span class="asdf" style="font-size: 16px; color: black;">-->
+<!--                                        <i class="fas fa-sign-in-alt"> 로그인</i>-->
+
+<!--                                    </span>-->
+<!--                                </a>-->
+<!--                            </li>-->
+
+<!--                            <li class="nav-item">-->
+<!--                                <a class="nav-link" href="#####">-->
+<!--                                    <span style="font-size: 16px; color: black;">-->
+<!--                                        <i class="fas fa-user-circle"> 회원가입</i>-->
+
+<!--                                    </span>-->
+<!--                                </a>-->
+<!--                            </li>-->
 
                         </ul>
 
