--- a/src/main/resources/templates/th/login/loginSuccess.html
+++ b/src/main/resources/templates/th/login/loginSuccess.html
@@ -13,6 +13,9 @@
 
 <h1>인증을 성공하였습니다.</h1>
 <a th:href="@{/customLogin}">다시 로그인하기</a>
+<a th:href="@{/customLogout}">로그 아웃</a>
+
+<a th:href="@{/testAuth}">테스트 auth</a>
 
 </body>
 
