--- a/src/main/resources/templates/th/login/signup.html
+++ b/src/main/resources/templates/th/login/signup.html
@@ -33,8 +33,8 @@
 					novalidate>
 					<hr>
 					<div class="mt-4 mb-3">
-						<label for="userid">이메일<span class="text-muted"></span></label> <input
-							type="text" class="form-control" id="userid" name="userid" placeholder="User email">
+						<label for="userid">아이디<span class="text-muted"></span></label> <input
+							type="text" class="form-control" id="userid" name="userid" placeholder="User id">
 						<div class="invalid-feedback">아이디를 입력하세요.</div>
 					</div>
 					<div class="mb-4">
@@ -48,6 +48,12 @@
 							type="userName" class="form-control" id="userName" name="userName"
 							placeholder="User name">
 						<div class="invalid-feedback">이름을 입력하세요.</div>
+					</div>
+					<div class="mb-4">
+						<label for="userEmail">이메일<span class="text-muted"></span></label> <input
+							type="userEmail" class="form-control" id="userEmail" name="userEmail"
+							placeholder="User email">
+						<div class="invalid-feedback">이메일을 입력하세요.</div>
 					</div>
 					<div class="mb-4">
 						<label for="userTel">전화번호<span class="text-muted"></span></label> <input
